environment and build

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "dobuilprod": "ng build --configuration=production && mv dist/apps/schoolplanner-fe  _static"
+    "dobuilprod": "ng build --configuration=production && mv dist/schoolplanner-fe  _static"
   },
   "private": true,
   "dependencies": {
